[tool.poetry]
name = "monacarlo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
tqdm = "^4.66.5"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ipython = "^8.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
